--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <meta name="author" content="Kimberly deLone">
 
   <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+  <style>
+    body {
+      background-color: red;
+    }
+  </style>
 
 </head>
 
