--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="author" content="Kimberly deLone">
 
   <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
-  <style>
+  <styles>
     body {
       background-color: red;
     }
-  </style>
+  </styles>
 
 </head>
 
