--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="author" content="Kimberly deLone">
 
   <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
-  <styles>
+  <style>
     body {
       background-image: url('31016274m.jpg');
     }
-  </styles>
+  </style>
 
 </head>
 
