--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
   <style>
     body {
-      background-image: url('31016274m.jpg');
+      background-image: url('https://kimberlydelone.github.io/31016274m.jpg');
     }
   </style>
 
