--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <style>
     body {
       background-image: url('https://kimberlydelone.github.io/31016274m.jpg');
+      background-repeat: no-repeat;
     }
   </style>
 
