--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     body {
       background-image: url('https://kimberlydelone.github.io/31016274m.jpg');
       background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
     }
   </style>
 
