--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
   <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
   <style>
     body {
-      background-image: url('https://kimberlydelone.github.io/31016274m.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
+  background: url(https://kimberlydelone.github.io/31016274m.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;      
     }
   </style>
 
