--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <body>
 
   <h1>Hello World!</h1>
+  
+  <ul><li><strong>A Pencil</strong></li><li><strong>Black Marker (Outlining)</strong></li><li><strong>Colored Pencils or Colored Markers</strong></li></ul>
 
 
   <!--<script src="js/scripts.js"></script>-->
