--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <h1>Hello World!</h1>
   
-  <ul><li><strong>A Pencil</strong></li><li><strong>Black Marker (Outlining)</strong></li><li><strong>Colored Pencils or Colored Markers</strong></li></ul>
+  <h1><ul><li><strong>A Pencil</strong></li><li><strong>Black Marker (Outlining)</strong></li><li><strong>Colored Pencils or Colored Markers</strong></li></ul></h1>
 
 
   <!--<script src="js/scripts.js"></script>-->
